css/css.css
/* ... */
.picdiv1 {
  height: 100%;
}

.picdiv1 img {
  height: 100%;
}

.textdiv1 {
  text-align: center;
  margin: 100px;
  height: 50%;
  width: 30%;
}

.style {
  font-size: 30px;
  padding: 20px 0;
  font-style: italic;
  font-family: 'Playfair Display', serif;
  color: darkRed;
}

.textdiv1 p {
  max-width: 350px;
}

.textdiv1 button {
  background-color: black;
  margin: 10px;
  padding: 10px;
  color: white;
  cursor: pointer;
}

.textdiv1 button:hover {
  background-color: white;
  color: black;
  transition: 0.5s;
}

/* ============ SCREEN 2 - CATEGORIES ============ */
.screen2 {
  height: 50vh;
}

.parent {
  overflow: hidden;
  height: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.divscreen2 {
  overflow: hidden;
  margin-top: 60px;
  width: 30%;
  position: relative;
  height: 100%;
}

.divscreen2 img {
  width: 100%;
  position: absolute;
  height: 85%;
}

.textscree2 {
  height: 85%;
  display: flex;
  flex-flow: column wrap;
  justify-content: end;
  align-items: center;
  padding-bottom: 15px;
  gap: 5px;
}

.divscreen2 p {
  position: relative;
  font-size: 15px;
  font-weight: 500;
  letter-spacing: 0.3px;
}

.textscree2 p:last-child {
  border: none;
  border-bottom: 2px solid darkRed;
  opacity: 0;
  font-size: 12px;
}

.divscreen2:hover p:first-child {
  transform: translateY(-15px);
  transition: all 0.5s ease-in-out;
}

.divscreen2:hover img {
  transform: scale(1.2);
  transition: all 0.5s ease-in-out;
}

.divscreen2:hover p:last-child {
  color: brown;
  transition: 0.3s;
  transform: scaleX(1.2);
  letter-spacing: 2px;
  opacity: 1;
}

/* ============ SCREEN 3 - TRENDING ============ */
.screen3 {
  height: 60vh;
}

.parentscreen3 {
  margin: 50px;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.headerscreen3 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 10%;
}

.contentscreen3 {
  width: 100%;
  height: 100%;
  justify-content: space-around;
  gap: 10px;
  align-items: center;
  display: flex;
  justify-content: space-around;
  gap: 10px;
}
.imgiconscreen3 {
  display: flex;
  justify-content: center;
  align-items: end;
  position: relative;
  width: 100%;
  height: 70%;
}

.divscreen3 {
  gap: 10px;
  align-items: center;
  flex-flow: column;
  display: flex;
  justify-content: center;
  position: relative;
  width: 300px;
  height: 300px;
}

.divscreen3 img {
  width: 100%;
  height: 100%;
}

.imageicon {
  height: 15%;
  width: 50%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  opacity: 0;
  background-color: beige;
  position: absolute;
}

.imageicon i {
  padding: 15px;
  width: 100%;
  height: 100%;
}

.imageicon i:hover {
  transition: 0.5s;
  color: beige;
  background-color: darkRed;
}

.divscreen3:hover .imageicon {
  transform: translateY(-20px);
  opacity: 1;
  transition: 2s;
}
.divscreen3:hover .test{
  color: brown;
}
.makerow {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.linethrought {
  text-decoration: line-through;
}

/* Flip card */
.frontback {
  transform-style: preserve-3d;
  transition: 2s;
  position: relative;
  width: 100%;
  height: 100%;
}

.frontback img {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  backface-visibility: hidden;
  object-fit: cover;
}

.frontback img:first-child {
  transform: rotateY(0deg);
}

.frontback img:last-child {
  transform: rotateY(180deg);
}

.divscreen3:hover .frontback {
  transform: rotateY(180deg);
}

/* ============ SCREEN 4 - TESTIMONIAL ============ */
.screen4 {
  height: 50vh;
}

.parentscreen4 {
  height: 100%;
}

.contentscreen4 {
  background-color: beige;
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100%;
}

.middlescreen4 {
  width: 50%;
  height: 60%;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 10px;
}

.middlescreen4 p {
  max-width: 500px;
}

.profilescreen4 {
  width: 100%;
  height: 30%;
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;
}

.profilescreen4 img {
  border-radius: 30px;
  width: 50px;
  height: 50px;
}

/* ============ SCREEN 5 - YOU MAY LIKE ============ */
.screen5 {
  margin-top: 50px;
  height: 70vh;
}

.parentscreen5 {
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  align-items: center;
  height: 100%;
}

.contentsection5 {
  height: 80%;
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.transitionscreen5 {
  background-color: blue;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: 100%;
  background-color: black;
  transition: all 0.5s ease-in-out;
}

.transitionscreen5 img:first-child {
  width: 100%;
  height: 100%;
  position: relative;
  z-index: 0;
}

.transitionscreen5 img:last-child {
  transform: translateY(-300px);
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  transition: 1s;
}

.divscreen3:hover .transitionscreen5 img:last-child {
  transform: translateY(0px);
  opacity: 1;
}

.imageiconscreen5 {
  z-index: 3;
}

/* ============ SCREEN 6 - LATEST COLLECTIONS ============ */
.screen6 {
  height: 80vh;
}

.parentscreen6 {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  background-color: darkRed;
  color: white;
  height: 100%;
  width: 100%;
  padding: 40px 0;
  gap: 25px;
}

.parentscreen6 h2 {
  font-size: 22px;
  color: white;
}

.parentscreen6 .contentscreen6 .divscreen6:hover h3 {
  color: beige;
}

.parentscreen6 .textbutton {
  color: white;
  border-bottom-color: white;
}

.contentscreen6 {
  padding: 0 50px;
  gap: 30px;
  height: 80%;
  display: flex;
  align-items: center;
}

.divscreen6 {
  overflow: hidden;
  display: flex;
  justify-content: start;
  flex-flow: column;
  align-items: start;
  width: 100%;
  height: 100%;
  gap: 8px;
  padding: 5px 0;
}
/* ... */

